--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation ('org.springframework.boot:spring-boot-starter-web')
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+	implementation 'org.locationtech.jts:jts-core:1.19.0'
 	implementation 'com.google.maps:google-maps-services:2.2.0'
 	implementation 'org.slf4j:slf4j-simple:1.7.25'
 
