--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.sql.init.mode=always
 logging.level.org.springframework.jdbc.core=DEBUG
 logging.level.org.springframework.jdbc.datasource=DEBUG
 logging.level.org.springframework.jdbc.support=DEBUG
+
+chatgpt.api-key: ${OPENAI_API_KEY}
